- NEW: Some styling of thumbnails in table
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3604 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: df653d1da636eeb6ab18da36cd64e80800864772
Former-commit-id: 36a462eb86c12f279718525794a9471f0d385e72
Former-commit-id: dbf1544d55edb710150811894968ccd99fe3a5d1 [formerly 81d0751355c84934e1e99f4f0c522df7a02ff884]
Former-commit-id: e8c487a538c507c19a1fbde5b3a4fada9ae989cb

--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -44,10 +44,16 @@
 .flexy-table .flexy-table-sortable-column {cursor:pointer;}
 .flexy-table th.flexy-table-field-str_title, .flexy-table td.flexy-table-field-str_title {max-width:none;text-overflow:inherit;}
 .flexy-table th.flexy-table-field-type-txt, .flexy-table td.flexy-table-field-type-txt {max-width:350px;}
-.flexy-table th.flexy-table-field-type-media, .flexy-table td.flexy-table-field-type-media,
-.flexy-table th.flexy-table-field-type-medias, .flexy-table td.flexy-table-field-type-medias {min-width:120px;max-width:600px;}
 .flexy-table th.flexy-table-field-type-rgb, .flexy-table td.flexy-table-field-type-rgb {text-align:center;max-width:none;text-overflow:none; }
 .flexy-table th.flexy-table-field-type-tme, .flexy-table td.flexy-table-field-type-tme {max-width:none; width:130px;}
+/* media thumbnails */
+.flexy-table th.flexy-table-field-type-media, .flexy-table td.flexy-table-field-type-media,
+.flexy-table th.flexy-table-field-type-medias, .flexy-table td.flexy-table-field-type-medias {min-width:120px;max-width:600px;}
+.flexy-table td.flexy-table-field-type-medias .flexy-field-thumb {float:left;}
+.flexy-table td.flexy-table-field-type-medias .thumbnail {height:25px;width:auto;padding:0px;margin-right:5px;border:none;border-radius:0px;}
+.flexy-table td.flexy-table-field-type-medias .thumbnail img {height:100%;margin:0px;padding:0px;}
+.flexy-table td.flexy-table-field-type-medias .thumbnail .caption {display:none}
+
 /* ROW Actions */
 .flexy-table .table-sortable tr .actions .as-sortable-handle {display:none}
 /* ROW SELECTION */
@@ -85,7 +91,6 @@
 .flexy-table table.table-media .flexy-table-field-b_exists  {display:none}
 .flexy-table table.table-media .flexy-table-field-path      {display:none}
 .flexy-table table.media-view-thumbs .thumbnail .caption { max-width:130px;overflow:hidden;text-overflow:ellipsis;}
-
 
 /* MEDIA as list */
 .flexy-table table.media-view-list .thumbnail { height:23px; border:none; border-radius:0px; padding:0px; margin:0px .25rem 0px 0px; background-color:transparent; overflow:visible;}
