- BREAKING CHANGE: Data model naming and results of relations are changed
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3618 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 1aec3ee5558c0afe10e1348458c6391c628a252d
Former-commit-id: b2700aeb50412dcf95a4287c8222d3af7cb356a7
Former-commit-id: 4411fd77c7fccb4ca1f43e53f1580dcc654ccfaf [formerly 455b8269d70c521d18f237b8d6fbec476fc60410]
Former-commit-id: 396ece5420ef1c9ae63e1e1ad00949b63905d683

--- a/sys/__test/less/flexy-table.less
+++ b/sys/__test/less/flexy-table.less
@@ -77,6 +77,9 @@
 
 /* FIELD TYPES */
 
+/* UNKNOWN / HIDDEN */
+.flexy-table td.flexy-table-field-type- { display:none; }
+
 /* RGB */
 .flexy-table tbody td span.field-type-rgb {
   display:block;
