- BUG: when combining data->validate() and ->update() and ->where() - NEW: Validation error messages when server gives validation errors
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3631 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: abbec75bc74ee6cfe23cfdc83c4a9088b873cfc0
Former-commit-id: c33cf2595d6011f3820a123d418a682b9f622eb0
Former-commit-id: 50172b41a6f4915f006f801e813f354c54672da4 [formerly 02749b5779a14996d71a7b87c6cc3213c91cd5e7]
Former-commit-id: cd9b42dde1a1d2bc71c23f623e3b390b36d4880a

--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -118,6 +118,7 @@ label {display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 
 /* GENERAL */
 .hidden {display:none;}
+.error {color:@brand-danger!important;}
 .action-click {cursor:pointer;}
 .action-move {cursor:move;}
 
