- STYLING: many_to_many relations - SAFETY: users can only see and change user groups if they are admin or super_admin - DATA: show now use Data instead of DB
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3645 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: b09f41e899ca46a182e0cbe42e6bddb2d6e74d00
Former-commit-id: 26bc021fbe855b35ebde666f057f4188b56d6b5b
Former-commit-id: e5012bdfacc3a1f4916a7b0afb8a49c2f1e145f6 [formerly c9ab6a9388c4d9985ff4af00f55ee65b62d7492f]
Former-commit-id: d8f4f9c066f2b98a9cfe11f1fc4ef622415861e4

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -717,6 +717,19 @@ tr.caption td				{ border:none; }
 	background-color:#EFB;
 }
 
+.grid .rel_data {
+  display:block; float:left;
+  border:solid 1px #DEA;
+  border-radius:4px;
+  padding:2px 5px;
+  margin-right:2px;
+  margin-bottom:2px;
+}
+.grid tr:hover .rel_data {
+  border-color:#F4FFE0;
+}
+
+
 table.res_menu_result .order {display:none;}
 
 /* Safari hack for hidden cells in grid in combo with jQuery sortable & selectable */
