- STYLING: standard image dropdown - SHOW form: image dropdowns - DATA: res_media_files new method ->get_files() which will replace mediatable->get_files() — a lot faster!!
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3646 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: d30650038e9f9d0a0ef22e3f82ed29e0b58170c7
Former-commit-id: eaffcc45005796b25a2fd8f54d3ad77b30e4bc7a
Former-commit-id: 473e83d7bc6afea46633675a8e06f4b92b392287 [formerly f7c6ba26e716c1742726fd56b8e2d4366013d94d]
Former-commit-id: fb55312d3a029b4b32da6d14d1ec5e8b5771680b

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -1149,8 +1149,9 @@ select.media, select.medias {
 	margin:0px 0px 2px 0px;
 	}
 select.image_dropdown {
-	width:400px;
+	width:460px;
   margin-top:-32px;
+  margin-left:150px;
 }
 
 body.normal_dropdowns select.image_dropdown {margin-top:0px;}
