- UPDATE: naar nieuwste IonAuth - DB: update to latest IonAuth - BREAKING CHANGE: Removed user library and old ion_auth - BREAKING CHANGE: Added flexy_auth library: a wrapper around ion_auth for FlexyAdmin use - ADD: install/composer scripts to automatically install/update IonAuth (and more in the future) - DATA: lot of small bugs and new config/models for standard tables
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3657 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 94ce4cb3d4c7538b5bcea14914b6a9511a74be87
Former-commit-id: 628b1605b63d23940cb91d7a1b25edbc26864977
Former-commit-id: c9d14c47d39ba7e6003a678c904ecc1122d4220f [formerly a74d1ccfb0e0c7b1beb4b1cc39606d1feea9f30b]
Former-commit-id: 23aa8e6c5ad511d761f49667eb9651481b3852cc

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -188,7 +188,8 @@ img {
 #menu li.log_geocode_cache a,
 #menu li.log_activity a,
 #menu li.log_cronjobs a,
-#menu li.log_stats a {
+#menu li.log_stats a,
+#menu li.log_login_attempts a {
 	background-image: url("../icons/stats.gif");
 	background-repeat: no-repeat;
 	background-position:0px 2px;
