- DATA/FORM: add-button naast dropdowns & styling van normale dropdowns
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3677 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: efb51d56e03636736d86e68ace735ed56b814ba2
Former-commit-id: 97fd0ab6784c6e152b03f57174ffc278864b533b
Former-commit-id: 1fcc6566b6391f24ec4b1acd2b0a61a47d4c55c5 [formerly d36242995060b8e2361aa5b46a19853c54146b6c]
Former-commit-id: 4ed724b320956a97cc8bf4f034ce3cf99c7e0c87

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -399,10 +399,11 @@ table.thumbs tr.caption .icon.delete {
 }
 
 div.add_button {
-	float:right;
-	width:20px;
-	height:20px;
-  margin:6px 2px 0px 0px;
+  float:right;
+	width:0px;
+	height:0px;
+  overflow:visible;
+  position:relative;
 }
 .multiple div.add_button {
 /*	margin-top:153px;*/
