--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -404,6 +404,8 @@ div.add_button {
 	height:0px;
   overflow:visible;
   position:relative;
+  right:17px;
+  top:5px;
 }
 .multiple div.add_button {
 /*	margin-top:153px;*/
@@ -1131,13 +1133,9 @@ body#tinymce th
 select {
 	width:460px;
 	max-height:150px;
-	}
-select.multiple {
-  height:150px;
 }
-select.button {
-	width:400px;
-	}
+select.multiple {height:150px;}
+select.has_button {width:434px;}
 select.date {
 	width:auto;
 	padding:2px;
@@ -1438,9 +1436,10 @@ input.filter.busy {
 /* extended search */
 .grid .caption .extended_search {width:100%;}
 .grid .caption .extended_search_row { padding-left:6px;}
-.grid .caption .extended_search_row:first-child {	background-image:url("../icons/search.gif");background-repeat:no-repeat;background-position:8px 5px;}
+/*.grid .caption .extended_search_row:first-child {  background-image:url("../icons/search.gif");background-repeat:no-repeat;background-position:8px 5px;}*/
 .grid .caption .extended_search_row:first-child .extended_search_and { visibility:hidden; }
 .grid .caption .extended_search_row:first-child .extended_search_remove { visibility:hidden; }
+.grid .caption .extended_search_row:first-child .extended_search_submit { visibility:visible; }
 .grid .caption .extended_search select, .grid .caption .extended_search input {
   background-color:#F4FFE0;
   width:auto;
@@ -1454,10 +1453,13 @@ input.filter.busy {
   height: 20px;
 	font-size:14px;
 }
+.grid .caption .extended_search .extended_search_submit {position:relative;top:2px;visibility:hidden;}
 .grid .caption .extended_search input {padding-left:4px;}
 .grid .caption .extended_search td {min-width:30px;}
 .grid .caption .extended_search_and {width:30px;}
-.grid .caption .extended_search img, img.extended_search_button {width:16px;height:16px;min-width:16px;position:relative;top:4px;cursor:pointer;}
+.grid .caption .extended_search img, img.extended_search_button {
+  width:16px;height:16px;min-width:16px;position:relative;top:4px;left:3px;cursor:pointer;
+}
 /*img.extended_search_button {margin-left:20px;}*/
 
 
