- DATA: table/model naming bug when online
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3708 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 0c25a4b1ed6c4f18ea7b345a5f270832b43ced02
Former-commit-id: 074f953f37c9000a8af04949d03acf0a9f04274f
Former-commit-id: 207c9a524e09a3708953ced80f81d229bfb4b149 [formerly 16007c048d8b1866940b8a2e0b3ad5fd0c5f1c3c]
Former-commit-id: 8ae4c4f2e98dfda99a49315fa9d831a603c2775b

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -261,7 +261,9 @@ img {
 	padding-left: 20px;
 	}
 
-/*#menu .users-rights {display:none;}*/
+#menu li.log_stats {
+  margin-top:10px;
+}
 
 #menu ul.lev2 {display:none;}
 
