- STYLING: hide add icon with media fields - DATA/FORM: get fieldsets from DATA settings
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3740 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: ffa161606a456b385c09d4054426ce5a5a0ff377
Former-commit-id: 725c89c51428243b5a8944e4f81e67263d2ee2be
Former-commit-id: 50f772f5538c817125597e609b158ff6fafec2f9 [formerly 7814945e8ab05b7b02662de4fabe10865c9ca6a1]
Former-commit-id: f7ff1f3583a9703493b820cab5db14152c3f5ac4

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -419,6 +419,8 @@ div.add_button {
 .multiple .icon.add {
 /*	margin-top:-154px;*/
 }
+.fieldtype_media .icon.add {display:none;}
+.fieldtype_medias .icon.add {display:none;}
 .icon.list {
 	background-image: url("../icons/list.gif");
 	background-repeat: no-repeat;
