- DATA: one_to_one relaties (overal verwerkt) - UI: grid strakker - UNITTEST: strakker
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3757 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: e7306978935a9ec6222a537c015d25761a0679be
Former-commit-id: a677d20e478889e06fad7c57b3695488d992793d
Former-commit-id: a4bf61d80b51ef90f44fde993c14d445e039c34f [formerly 500f9cacdd871c46e01ec4f96b2c8f67d2a3a04f]
Former-commit-id: f0865838910fcb2d8be0f1c85334062ef82354f7

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -638,9 +638,8 @@ tr.caption div.filter {
 	overflow:hidden;
 	min-width:20px;
 }
-.grid th.id {
-	padding-right:0px;
-}
+.grid tbody td {white-space:pre;}
+.grid th.id {padding-right:0px;}
 tr.caption td				{ border:none; }
 
 .grid thead td,
