- API BUG: Table & Row rechten voor media - NEW: Media Form
git-svn-id: file:///Users/jan/Dropbox/svn/FlexyAdmin/trunk@3778 0c02b2c5-a8bd-4e35-85b2-cf8cacb96951

Former-commit-id: 396c126d261cb922ad55f8e7ff3549956e500826
Former-commit-id: e26f0578bcbffc0cc4f2f8c32f79f8a65615f49b
Former-commit-id: 27fe3a7e7ba0cea8f5587de1727bd21908036551 [formerly 122252d5d274fa05aba02312d6cd9495c3af6fb9]
Former-commit-id: cc1347472d96e6906eeabf77ea8570afd3ee5c45

--- a/sys/__test/less/flexy-main.less
+++ b/sys/__test/less/flexy-main.less
@@ -114,8 +114,6 @@ label {display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 /* FIELDS */
 
 
-
-
 /* GENERAL */
 .hidden {display:none;}
 .error {color:@brand-danger!important;}
@@ -140,5 +138,6 @@ label {display:block;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 
 /* FLEXY-BLOCK: text uppercase & hide spaces */
 .flexy-block {text-transform:uppercase;margin-right:1px;}
+.flexy-block.text-lowercase {text-transform:lowercase;}
 .flexy-block.char_space {visibility:hidden;}
 
