Menu added (header & footer)
Former-commit-id: 82abe49bf744512d5bcb824987f80cc93c73342a
Former-commit-id: 243bc2013f1bacac5ac98b0283943bc51cddd9c0
Former-commit-id: 4ff80057c5e13a06cd152a903d540609aee5189d [formerly 669a64de167cde6f7e825747d9406d207573988c]
Former-commit-id: d7c6bb09d2c2581f7e3f8247f997f0748ada07e1

--- a/sys/flexyadmin/assets/css/flexyadmin.css
+++ b/sys/flexyadmin/assets/css/flexyadmin.css
@@ -1,4 +1,8 @@
 
+/* MENUS */
+#header .nav, #footer .nav {float:right;}
+
+
 /* FLEXY-BLOCK: text uppercase & hide spaces */
 .flexy-block {text-transform:uppercase;margin-right:1px;}
 .flexy-block.text-lowercase {text-transform:lowercase;}
