Removed jQuey & Bootstrap js & Added vue and flexy-blocks component
Former-commit-id: 5043be83f28d0163868e97e0358c4043a53a11a2
Former-commit-id: f35635c37cf7ffdd92dbdac8ee24b796bdaf603a
Former-commit-id: e4534f49bb712824ef94156ea8060922670198ac [formerly 89186b62da7b1592cbdd9d4a0ee36d9e6e6a4883]
Former-commit-id: 0d8697b99abf5f778a8e98361714bbbc9d28a678

--- a/sys/flexyadmin/assets/css/flexyadmin.css
+++ b/sys/flexyadmin/assets/css/flexyadmin.css
@@ -6,4 +6,4 @@
 /* FLEXY-BLOCK: text uppercase & hide spaces */
 .flexy-block {text-transform:uppercase;margin-right:1px;}
 .flexy-block.text-lowercase {text-transform:lowercase;}
-.flexy-block.char_space {visibility:hidden;}
+.flexy-block.char-space {visibility:hidden;}
