--- a/sys/__test/css/froala_style.css
+++ b/sys/__test/css/froala_style.css
@@ -1,21 +1,17 @@
 /*!
- * froala_editor v2.0.5 (https://www.froala.com/wysiwyg-editor)
- * License https://froala.com/wysiwyg-editor/terms
- * Copyright 2014-2015 Froala Labs
+ * froala_editor v2.3.5 (https://www.froala.com/wysiwyg-editor)
+ * License https://froala.com/wysiwyg-editor/terms/
+ * Copyright 2014-2016 Froala Labs
  */
 
 .clearfix::after {
   clear: both;
   display: block;
   content: "";
+  height: 0;
 }
-.fr-view {
-  /**
-   * Image style.
-   */
-  /**
-   * Video style
-   */
+.fr-view strong {
+  font-weight: 700;
 }
 .fr-view table {
   border: none;
@@ -71,6 +67,19 @@
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+.fr-view[dir="rtl"] blockquote {
+  border-left: none;
+  border-right: solid 2px #5e35b1;
+  margin-right: 0;
+  padding-right: 5px;
+  padding-left: 0px;
+}
+.fr-view[dir="rtl"] blockquote blockquote {
+  border-color: #00bcd4;
+}
+.fr-view[dir="rtl"] blockquote blockquote blockquote {
+  border-color: #43a047;
+}
 .fr-view blockquote {
   border-left: solid 2px #5e35b1;
   margin-left: 0;
@@ -85,17 +94,23 @@
   border-color: #43a047;
   color: #43a047;
 }
-.fr-view a.fr-strong {
-  font-weight: 700;
-}
-.fr-view a.fr-green {
-  color: green;
-}
 .fr-view span.fr-emoticon {
   font-weight: normal;
   font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
   display: inline;
   line-height: 0;
+}
+.fr-view span.fr-emoticon.fr-emoticon-img {
+  background-repeat: no-repeat !important;
+  font-size: inherit;
+  height: 1em;
+  width: 1em;
+  min-height: 20px;
+  min-width: 20px;
+  display: inline-block;
+  margin: -0.1em 0.1em 0.1em;
+  line-height: 1;
+  vertical-align: middle;
 }
 .fr-view .fr-text-gray {
   color: #AAA !important;
@@ -112,43 +127,38 @@
   text-transform: uppercase;
 }
 .fr-view img {
-  z-index: 3;
   position: relative;
-  overflow: auto;
-  cursor: pointer;
+  max-width: 100%;
 }
 .fr-view img.fr-dib {
-  margin: auto;
+  margin: 5px auto;
   display: block;
   float: none;
   vertical-align: top;
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
 .fr-view img.fr-dib.fr-fil {
-  margin: 5px auto 5px 0;
-  left: 5px;
+  margin-left: 0;
 }
 .fr-view img.fr-dib.fr-fir {
-  margin: 5px 0 5px auto;
-  right: 5px;
+  margin-right: 0;
 }
 .fr-view img.fr-dii {
-  margin: auto;
   display: inline-block;
   float: none;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  vertical-align: bottom;
+  margin-left: 5px;
+  margin-right: 5px;
+  max-width: calc(100% - (2 * 5px));
 }
 .fr-view img.fr-dii.fr-fil {
-  margin: 5px 10px 5px 0;
-  left: 5px;
   float: left;
+  margin: 5px 5px 5px 0;
+  max-width: calc(100% - 5px);
 }
 .fr-view img.fr-dii.fr-fir {
-  margin: 5px 0 5px 10px;
-  right: 5px;
   float: right;
+  margin: 5px 0 5px 5px;
+  max-width: calc(100% - 5px);
 }
 .fr-view img.fr-rounded {
   border-radius: 100%;
@@ -193,4 +203,85 @@
 }
 .fr-view .fr-video.fr-dvi.fr-fvr {
   float: right;
+}
+.fr-view a.fr-strong {
+  font-weight: 700;
+}
+.fr-view a.fr-green {
+  color: green;
+}
+.fr-view button.fr-rounded,
+.fr-view input.fr-rounded,
+.fr-view textarea.fr-rounded {
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+.fr-view button.fr-large,
+.fr-view input.fr-large,
+.fr-view textarea.fr-large {
+  font-size: 24px;
+}
+/**
+ * Image style.
+ */
+a.fr-view.fr-strong {
+  font-weight: 700;
+}
+a.fr-view.fr-green {
+  color: green;
+}
+/**
+ * Link style.
+ */
+img.fr-view {
+  position: relative;
+  max-width: 100%;
+}
+img.fr-view.fr-dib {
+  margin: 5px auto;
+  display: block;
+  float: none;
+  vertical-align: top;
+}
+img.fr-view.fr-dib.fr-fil {
+  margin-left: 0;
+}
+img.fr-view.fr-dib.fr-fir {
+  margin-right: 0;
+}
+img.fr-view.fr-dii {
+  display: inline-block;
+  float: none;
+  vertical-align: bottom;
+  margin-left: 5px;
+  margin-right: 5px;
+  max-width: calc(100% - (2 * 5px));
+}
+img.fr-view.fr-dii.fr-fil {
+  float: left;
+  margin: 5px 5px 5px 0;
+  max-width: calc(100% - 5px);
+}
+img.fr-view.fr-dii.fr-fir {
+  float: right;
+  margin: 5px 0 5px 5px;
+  max-width: calc(100% - 5px);
+}
+img.fr-view.fr-rounded {
+  border-radius: 100%;
+  -moz-border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+img.fr-view.fr-bordered {
+  border: solid 10px #CCC;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
