--- a/sys/flexyadmin/assets/css/flexyadmin.css
+++ b/sys/flexyadmin/assets/css/flexyadmin.css
@@ -1,6 +1,37 @@
+/* DEFAULTS */
 
-/* MENUS */
-#header .nav, #footer .nav {float:right;}
+* {font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;}
+html {font-size:14px;line-height: 1.42857143;}
+a { outline: none !important; }
+
+/* BOOTSTRAP OVERRIDES */
+.btn { padding:6px 12px; }
+
+/* HEADER & FOOTER */
+#header, #footer {height:46px;padding-top:0px;padding-bottom:0px;background-color:#f8f8f8;}
+#header {border-bottom:solid 1px #e7e7e7;}
+#footer {border-top:solid 1px #e7e7e7;}
+#header .nav, #footer .nav {float:right;padding-top:.425rem}
+
+/* SIDEBAR MENU */
+#flexy-menu-side {
+  float: left;
+  width: 16.66666667%;
+}
+#flexy-menu-side > ul {
+  background-color: #f8f8f8;
+  border:solid 1px #e7e7e7;
+  margin-bottom:1rem;
+  border-radius:.25rem;
+}
+.nav > li > a { text-transform: uppercase; }
+.nav > li > a:hover, .nav > li > a:focus { text-decoration: none; background-color: #eee; }
+.nav > li > a > span.fa {margin-right:.25rem;}
+
+
+/* CONTENT */
+#content {margin:55px 0px;}
+
 
 
 /* FLEXY-BLOCK: text uppercase & hide spaces */
