--- a/sys/flexyadmin/assets/scss/themes/_jandenbesten.scss
+++ b/sys/flexyadmin/assets/scss/themes/_jandenbesten.scss
@@ -8,14 +8,14 @@
 //$gray-dark:                 #373a3c;
 //$gray:                      #55595c;
 //$gray-light:                #818a91;
-//$gray-lighter:              #eceeef;
-//$gray-lightest:             #f7f7f9;
+$gray-lighter:              #99CA3C;
+$gray-lightest:             #FFE200;
 
-$brand-primary:             #428bca;
-//$brand-success:             #5cb85c;
-//$brand-info:                #5bc0de;
-//$brand-warning:             #f0ad4e;
-//$brand-danger:              #d9534f;
+$brand-primary:             #A72179;
+$brand-success:             #0F0;
+$brand-info:                #DEA;
+$brand-warning:             #ff0;
+$brand-danger:              #F00;
 //$brand-inverse:             $gray-dark;
 
 // Fonts
