Styling, Better Menu, Better Grid
Former-commit-id: f1bba7109a16c97b92c65880213d9d0876d7d4f6
Former-commit-id: 71c4c7655296d3e91bf0dee2b9bc7508559731a8
Former-commit-id: ecf81da5113991e8c18ac1c45de0740ed6c2df66 [formerly 2a7a3cc3c06df293d37ada05c0f7acd44f91b15e]
Former-commit-id: 8b24e3b602f3cccaadd85645270e90dfa71787cd

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -43,7 +43,8 @@ a {outline: none !important;}
   overflow:hidden;
   text-overflow: ellipsis;
 }
-.nav-pills .nav-link:hover, .nav-pills .nav-link:focus {background-color: $gray-lighter;}
+.nav-pills .nav-link.active {background-color: $brand-primary; color: $body-bg!important;}
+.nav-pills .nav-link:not(.active):hover, .nav-pills .nav-link:not(.active):focus {background-color: $gray-lighter; color: $brand-primary!important;}
 .nav > li > a > span.fa { margin-right:.35rem;}
 
 /* MAIN > CARD */
