Busy with vue-grid
Former-commit-id: e65f907cd52b75312286544ec9a6d317ae2240c7
Former-commit-id: b5ec84560d5d9bf8096e784c1487e5dee384eeb1
Former-commit-id: a615f7b7285d8ed928a93f00405fba5339ecfda8 [formerly 5119e010f1b10f912358be6e7247e29fd919dd2d]
Former-commit-id: 79e0a38bf8150fab09613546868fba484e480e33

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -63,4 +63,8 @@ a {outline: none !important;}
 .grid .card-footer {padding:0;}
 .grid .card-footer .pagination {margin:0;}
 
-.grid td, .grid th {white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.grid td, .grid th {overflow:hidden;text-overflow:ellipsis;}
+.grid th {color:$brand-primary;}
+.grid th a {text-decoration:none;}
+.grid th span.fa {position:relative;float:right;margin-top:.25rem;}
+.grid td {white-space:nowrap;}
