Simple grid ready
Former-commit-id: cf7601c617912b2ae97a54a4dfd7b09391b32577
Former-commit-id: 75cb9835ca2e59c60b65c86a3ebf18943499bead
Former-commit-id: 7c53331ad82c8cd99c249b52b8edcbc4bd256dbb [formerly 802bda8a582a808adf39b3a256ecb0f73a8eeb57]
Former-commit-id: b5fa7e1b04938bbf19e56ad27b48df2619d20be2

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -49,7 +49,7 @@ a {outline: none !important;}
 
 /* MAIN > CARD */
 #main > .card {border:solid 1px $brand-primary;}
-#main > .card > .card-header {background-color:$brand-primary;color:$body-bg;}
+#main > .card > .card-header {background-color:$brand-primary;color:$body-bg;padding:.5rem;}
 
 /* FLEXY-BLOCK: text uppercase & hide spaces */
 .flexy-block {text-transform:uppercase;margin-right:1px;}
@@ -57,14 +57,25 @@ a {outline: none !important;}
 .flexy-block.char-space {visibility:hidden;}
 
 
+/* PAGINATION */
+.pagination-container {width:100%;}
+.pagination {margin:0;}
+.pagination-info {
+  color:$brand-primary;
+  margin-top:.5rem;
+  float:right;
+}
+
 
 /* GRID */
 .grid .card-block {padding:0;}
-.grid .card-footer {padding:0;}
-.grid .card-footer .pagination {margin:0;}
-
-.grid td, .grid th {overflow:hidden;text-overflow:ellipsis;}
-.grid th {color:$brand-primary;}
+.grid .card-footer {padding:.25rem .25rem 0;}
+/* HEADERS */
+.grid th {overflow:hidden;text-overflow:ellipsis;color:$brand-primary;}
 .grid th a {text-decoration:none;}
-.grid th span.fa {position:relative;float:right;margin-top:.25rem;}
-.grid td {white-space:nowrap;}
+.grid th span {white-space:nowrap;text-transform:uppercase;}
+.grid th > span.fa {position:relative;float:right;margin-top:.25rem;}
+.grid th.grid-header-type-primary {width:10rem;max-width:10rem;}
+/* CELLS */
+.grid td {overflow:hidden;text-overflow:ellipsis;white-space:nowrap;max-width:250px;}
+.grid td.grid-cell-type-checkbox {text-align:center;}
