--- a/sys/flexyadmin/assets/scss/themes/_classic.scss
+++ b/sys/flexyadmin/assets/scss/themes/_classic.scss
@@ -12,10 +12,10 @@ $gray-lighter:              #DEA;
 $gray-lightest:             lighten($gray-lighter,15%);
 
 $brand-primary:             #696;
-$brand-success:             #0F0;
-$brand-info:                #DEA;
-$brand-warning:             #ff0;
-$brand-danger:              #F00;
+$brand-success:             #090;
+$brand-info:                #6B6;
+$brand-warning:             #D90;
+$brand-danger:              #D00;
 //$brand-inverse:             $gray-dark;
 
 // Fonts
