Starting with webpack
Former-commit-id: 862c689464bdf14a2badfd0d67c1ec989de8982c
Former-commit-id: 164e4868d1ed2211cb73f0367a0ab36bec4b33ef
Former-commit-id: 8da1ed1cab746a9330bbda73948ce55f31db012a [formerly 7c813975261a579e4940d3db55f356b93160e6ac]
Former-commit-id: 25c4a9f4d0bda173cfa7eb2ff1bef7c45fae48f7

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -52,9 +52,9 @@ a {outline: none !important;}
 #main > .card > .card-header {background-color:$brand-primary;color:$body-bg;padding:.5rem;}
 
 /* FLEXY-BLOCK: text uppercase & hide spaces */
-.flexy-block {text-transform:uppercase;margin-right:1px;}
-.flexy-block.text-lowercase {text-transform:lowercase;}
-.flexy-block.char-space {visibility:hidden;}
+//.flexy-block {text-transform:uppercase;margin-right:1px;}
+//.flexy-block.text-lowercase {text-transform:lowercase;}
+//.flexy-block.char-space {visibility:hidden;}
 
 
 /* PAGINATION */
