Busy with Webpack
Former-commit-id: 184ad5302453ef8f9f8301e7f4cdc7f52df6fda1
Former-commit-id: 1905c9ee026939cca1484d8e74d8457761346119
Former-commit-id: 8d6fcd7dcd0af5fdccf75537ed323ee31b319b8b [formerly 2b0dc9cdde0fa42293ad2b33239d0226fdafcd70]
Former-commit-id: c5ca70984785627aad34a8a5d8a14eee1dcaa44a

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -3,8 +3,8 @@
  * Copyright Jan den Besten
  */
 
-//@import "themes/bootstrap";
-@import "themes/classic";
+@import "themes/bootstrap";
+//@import "themes/classic";
 //@import "themes/jandenbesten";
 
 @import "bootstrap/bootstrap";
