Busy with fonts & styling with WebPack
Former-commit-id: e157836ab592830f60068d90d430ede9cce45c69
Former-commit-id: dacad7d2c3cca23db95d19be0cbe7617ccd77733
Former-commit-id: 81b0f9e18bff4c978cef77d2e2921aad5227af49 [formerly ebf2a66c9238b412d10742725ec09bd67715c98e]
Former-commit-id: f2c26232c9b1835e0105d6315cd8d0b63fa398f4

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -3,11 +3,12 @@
  * Copyright Jan den Besten
  */
 
-@import "themes/bootstrap";
-//@import "themes/classic";
+//@import "themes/bootstrap";
+@import "themes/classic";
 //@import "themes/jandenbesten";
 
 @import "bootstrap/bootstrap";
+@import "../css/font-awesome";
 
 
 /* DEFAULTS */
