--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -8,7 +8,7 @@
 //@import "themes/jandenbesten";
 
 @import "bootstrap/bootstrap";
-@import "../css/font-awesome";
+//@import "../css/font-awesome";
 
 
 /* DEFAULTS */
