Webpack & LiveReload & .vue files with styling
Former-commit-id: 0e0e565fa457476d041ff3e8eaa4125fa5ff93a4
Former-commit-id: 5a9b99faca4cb40a985653a8ed8bda47d172465b
Former-commit-id: 743182b44c72e2ef3d0967100be177bd3aa7d2c6 [formerly 8ec38ac37940fcd15188284f3e871c883d6503c6]
Former-commit-id: 6af9a1158f7407ff5c7274f84dd4ef9a66ee510f

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -3,13 +3,14 @@
  * Copyright Jan den Besten
  */
 
+// THEME (uncomment the choosen thema)
 @import "themes/classic";
 //@import "themes/bootstrap";
 //@import "themes/jandenbesten";
 
-@import "bootstrap/bootstrap";
-//@import "../css/font-awesome";
 
+// FROM HERE, DON'T EDIT
+@import "bootstrap/bootstrap";
 
 /* DEFAULTS */
 a {outline: none !important;}
@@ -51,35 +52,3 @@ a {outline: none !important;}
 /* MAIN > CARD */
 #main > .card {border:solid 1px $brand-primary;}
 #main > .card > .card-header {background-color:$brand-primary;color:$body-bg;padding:.5rem;}
-
-/* FLEXY-BLOCK: text uppercase & hide spaces */
-//.flexy-block {text-transform:uppercase;margin-right:1px;}
-//.flexy-block.text-lowercase {text-transform:lowercase;}
-//.flexy-block.char-space {visibility:hidden;}
-
-
-/* PAGINATION */
-.pagination-container {width:100%;}
-.pagination {margin:0;}
-.pagination-info {
-  color:$brand-primary;
-  margin-top:.5rem;
-  float:right;
-}
-
-
-/* GRID */
-.grid .card-block {padding:0;}
-.grid .card-footer {padding:.25rem .25rem 0;}
-/* HEADERS */
-.grid th {overflow:hidden;text-overflow:ellipsis;color:$brand-primary;}
-.grid th a {text-decoration:none;}
-.grid th span {white-space:nowrap;text-transform:uppercase;}
-.grid th > span.fa {position:relative;float:right;margin-top:.25rem;}
-.grid th.grid-header-type-primary {width:10rem;max-width:10rem;}
-.grid.grid-type-tree th.grid-header-type-primary {width:10rem;max-width:10rem;}
-.grid.grid-type-table th.grid-header-type-primary {width:7.75rem;max-width:7.75rem;}
-
-/* CELLS */
-.grid td {overflow:hidden;text-overflow:ellipsis;white-space:nowrap;max-width:250px;}
-.grid td.grid-cell-type-checkbox {text-align:center;}
