--- a/sys/flexyadmin/assets/scss/themes/_bootstrap.scss
+++ b/sys/flexyadmin/assets/scss/themes/_bootstrap.scss
@@ -3,4 +3,5 @@
 // Copy variables from `_variables.scss` to this file to override default values
 // without modifying source files.
 
+$font-size-root: 14px;
 h1 {text-transform:uppercase;}
