--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -60,8 +60,11 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 
 /* FORM */
 .col-form-label {text-transform:uppercase;font-weight:bold;padding-bottom:0;margin-bottom:0;}
-.form-group:hover {border-radius:$border-radius;background-color:$gray-lighter;}
-.form-group:hover input {border-color:$brand-primary};
+//.form-group.row {margin-left:0;margin-right:0;}
+//.form-group.row>.col-form-label {padding-left:.5rem;}
+//.form-group.row>.div {padding-right:0;margin-right:0!important;}
+.form-group.row:hover {border-radius:$border-radius;background-color:$gray-lighter;}
+.form-group.row:hover input {border-color:$brand-primary};
 
 
 
