Bootstrap from npm (easy updating)
Former-commit-id: 2e3610bfe458e8242601fa5990e053e47093f438
Former-commit-id: 5b3619035a4ad986d95ede2479fe6d0824d81032
Former-commit-id: f7d19995b9d0334c15b280b9710f71815b6037c5 [formerly 633eb564c41ddc5a36059f625ad591cbfaa580d9]
Former-commit-id: 3e300d96cbbc011c44f39aa686260ccce21d112b

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -10,7 +10,7 @@
 
 
 // FROM HERE, DON'T EDIT
-@import "bootstrap/bootstrap";
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 
 /* DEFAULTS */
 a {outline: none !important;}
