grid selections & some styling
Former-commit-id: 0c469f382bfd3a19813959f6ca7077b96875f770
Former-commit-id: 97c04693b90504333d9a6b4bb805ee466221cbb7
Former-commit-id: 34e2272f37fa1235fa80e55d253e7ee9c0581988 [formerly 8b3db112883eafc88497bc489b43ac3becf83eb5]
Former-commit-id: 5b054dc246d15a3301fd08a63f10ebfe1b7250ad

--- a/sys/flexyadmin/assets/scss/themes/_classic.scss
+++ b/sys/flexyadmin/assets/scss/themes/_classic.scss
@@ -29,16 +29,37 @@ $font-size-h1: 1.5rem;
 $font-size-h2: 1.25rem;
 $font-size-h3: 1rem;
 
+h1 {text-transform:uppercase;}
 
 // Borders
-//$border-radius:          .25rem !default;
-//$border-radius-lg:       .3rem !default;
-//$border-radius-sm:       .2rem !default;
+//$border-radius:          .25rem;
+//$border-radius-lg:       .3rem;
+//$border-radius-sm:       .2rem;
 
 
 
 // Buttons
 $btn-padding-x:                  .75rem;
 
+// Form states and alerts
+//
+// Define colors for form feedback states and, by default, alerts.
 
-h1 {text-transform:uppercase;}
+//$state-success-text:             #3c763d;
+//$state-success-bg:               #dff0d8;
+//$state-success-border:           darken($state-success-bg, 5%);
+//
+//$state-info-text:                #31708f;
+$state-info-bg:                    lighten($brand-warning,50%);
+//$state-info-border:              darken($state-info-bg, 7%);
+//
+//$state-warning-text:             #8a6d3b;
+//$state-warning-bg:               #fcf8e3;
+//$mark-bg:                        $state-warning-bg;
+//$state-warning-border:           darken($state-warning-bg, 5%);
+//
+//$state-danger-text:              #a94442;
+//$state-danger-bg:                #f2dede;
+//$state-danger-border:            darken($state-danger-bg, 5%);
+
+
