Styling bug: did not show filenames in thumb show
Former-commit-id: 9aa8a17d19e91fb2b525242b7bd73618c66825cf
Former-commit-id: 511c7e46e484ce109ba3b4b83c850c02a0ce5b56
Former-commit-id: fcc58e95d041aeb297ee8362ddb95f028db7a1b3 [formerly 81009e61839770865fca5f8c9dc6a267929df4ed]
Former-commit-id: 17123a09cc4e2c82af1efd635b944d2159179978

--- a/sys/flexyadmin/assets/css/admin_main.css
+++ b/sys/flexyadmin/assets/css/admin_main.css
@@ -639,6 +639,7 @@ tr.caption div.filter {
 	min-width:20px;
 }
 .grid tbody td {white-space:pre;}
+.grid.files tbody td {white-space:normal;}
 .grid th.id {padding-right:0px;}
 tr.caption td				{ border:none; }
 
