--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -42,7 +42,7 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
   border-radius:.25rem;
 }
 .nav-pills .nav-link {
-  padding:.35rem .5rem;
+  padding:.45rem .5rem;
   text-transform: uppercase;
   white-space:nowrap;
   overflow:hidden;
@@ -50,6 +50,16 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 }
 .nav-pills .nav-link.active {background-color: $brand-primary; color: $body-bg!important;}
 .nav-pills .nav-link:not(.active):hover, .nav-pills .nav-link:not(.active):focus {background-color: $gray-lighter; color: $brand-primary!important;}
+
+/* HELP */
+.flexy-help {
+  display:none;
+  position:fixed;
+  top:0;
+  right:0;
+  width:25%;
+  z-index:9999;
+}
 
 /* MAIN > CARD */
 #main > .card {border:solid 1px $brand-primary;}
