--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -30,9 +30,18 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 #header .nav, #footer .nav {float:right;padding-top:.45rem;}
 
 /* CONTENT */
-#content {margin:$font-size-root*4 0px;}
+#content {margin:1rem 0px;}
 #flexy-menu-side {padding-left:0;}
 #main {padding-right:.5rem;}
+
+/* PROGRESS */
+.progress {margin:0;height:2px;border-radius:0;}
+
+/* MESSAGES */
+#messages {
+  width:100%;
+  margin-top:$font-size-root*4;
+}
 
 /* SIDEBAR MENU */
 #flexy-menu-side > ul {
@@ -75,6 +84,10 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 .form-group.row:hover input {border-color:$brand-primary};
 .card.form .form-group.row:hover {border-radius:$border-radius;background-color:$gray-lighter;}
 
+/* TRANSITIONS */
+.slideUp-enter-active {transition: all .2s ease;}
+.slideUp-leave-active {transition: all 1s ease;}
+.slideUp-enter, .slideUp-leave-active {margin-top: -$font-size-root*4;opacity: 0;}
 
 
 /* DEBUG HELPERS */
