Server Side Validation
Former-commit-id: 30019bd78d117a71f18ae89544e2d8e643863407
Former-commit-id: be2004ddbf54c52230ee05a2c9b1b3139bacc8d3
Former-commit-id: eafcbb422efd1acf39adc14283f07a52c85a7a6b [formerly 58c0cfe6de25812f41a11c519361530c7f8269b2]
Former-commit-id: 2208c6057e39cbce9119abcdae0057c6389a9a68

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -127,7 +127,7 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 .nav-tabs>li>a.nav-link {text-transform:uppercase;}
 
 /* FORM */
-.form-group.row:hover input {border-color:$brand-primary};
+.form-group.row:not(.has-danger):hover input {border-color:$brand-primary};
 .card.form .form-group.row:hover {border-radius:$border-radius;background-color:$gray-lighter;}
 
 /* TRANSITIONS */
