Login form ook met taal (van de browser of default), en ‘de’ verwijderd
Former-commit-id: 65bed155c6aa0d7b1121c77b044d9df1d61c110b
Former-commit-id: 17fc03f3bcb768d4f77e19271630dde35480055e
Former-commit-id: e9c5073f59b1887848eb34e5c8b78f19afdf716d [formerly 878e5ad73a386790a36836b1605b492231643b03]
Former-commit-id: d2efd78bb2359b910555ac536dccc56461152676

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -64,6 +64,7 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 
 /* LOGIN */
 #login-form {width:20rem;margin:20% auto;box-shadow:0 0 1.25rem $gray-dark;}
+#login-form h1 {text-transform:none;}
 
 /* HEADER & FOOTER */
 #header, #footer {
