--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -131,6 +131,10 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 .form-group.row:not(.has-danger):hover input {border-color:$brand-primary};
 .card.form .form-group.row:hover {border-radius:$border-radius;background-color:$gray-lighter;}
 
+/* SORTABLE */
+.sortable-chosen, .sortable-fallback {background-color:$gray-lightest;border-top:dashed 2px $brand-primary;border-bottom:dashed 2px $brand-primary;}
+
+
 /* TRANSITIONS */
 .slideUp-enter-active {transition: all .2s ease;}
 .slideUp-leave-active {transition: all 1s ease;}
