--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -140,6 +140,10 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
   box-shadow:0 0 .5rem $gray-dark;
 }
 
+/* GRID / MEDIA */
+.media-thumb-sm {height:1.75rem;border-radius:$border-radius/2;}
+.grid .grid-relation-item {border:solid 1px $gray-lighter;border-radius:$border-radius;padding:.15rem .35rem;margin-right:.25rem;}
+
 
 /* TRANSITIONS */
 .slideUp-enter-active {transition: all .2s ease;}
