Grid Media basics & some styling
Former-commit-id: 993c748f154d9f6686855331c7a70a96c0292251
Former-commit-id: 14e313aee6e4964a6db3c4363cf95cc3624e2473
Former-commit-id: 044c799b364274dadfc3b0c187f39dbb9d0fa64c [formerly 277b1db63a58f6cee971e0c87c640a758c8b2458]
Former-commit-id: 51bf8fd453ad7c9868ee1afae35dc99f65625e5c

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -3,16 +3,14 @@
  * Copyright Jan den Besten
  */
 
-// THEME
-@import "themes/classic";
-//@import "themes/bootstrap";
-//@import "themes/jandenbesten";
+// BOOTSTRAP & THEME
+@import "theme";
 
 
 // BOOTSTRAP
 // Core variables and mixins
-@import "../../../node_modules/bootstrap/scss/custom";
-@import "../../../node_modules/bootstrap/scss/variables";
+//@import "../../../node_modules/bootstrap/scss/custom";
+//@import "../../../node_modules/bootstrap/scss/variables";
 @import "../../../node_modules/bootstrap/scss/mixins";
 // Reset and dependencies
 @import "../../../node_modules/bootstrap/scss/normalize";
@@ -55,12 +53,10 @@
 
 
 
-
-
-
 /* DEFAULTS */
 a {outline: none !important;}
 a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
+.btn.disabled {opacity:.5;}
 
 /* LOGIN */
 #login-form {width:20rem;margin:20% auto;box-shadow:0 0 1.25rem $gray-dark;}
@@ -123,8 +119,8 @@ a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
 /* MAIN > CARD */
 #main > .card {border:solid 1px $brand-primary;}
 #main > .card > .card-header {background-color:$brand-primary;color:$body-bg;padding:.5rem;}
+.card > .card-header > * {margin:0 1rem 0 0;float:left;}
 .card > .card-header > *:last-child {margin:0;float:right;}
-.card > .card-header > *:first-child {margin:0;float:left;}
 .card > .card-header .btn {text-transform:uppercase};
 
 /* TABS */
