Flexy-Button replaced all buttons

--- a/sys/flexyadmin/assets/scss/flexyadmin.scss
+++ b/sys/flexyadmin/assets/scss/flexyadmin.scss
@@ -56,10 +56,10 @@
 /* DEFAULTS */
 a {outline: none !important;}
 a>.fa, .btn>.fa {margin-right:.35rem;margin-left:.35rem;}
-.btn.disabled {opacity:.5;}
-.btn.btn-icon {width:1.85rem;height:1.6rem;padding:.1rem 0;text-align:center;}
-.btn.btn-icon-text {width:auto;padding:.1rem .5rem 0 0;text-transform:uppercase;}
-.btn.btn-icon .fa {width:1rem;}
+//.btn.disabled {opacity:.5;}
+//.btn.btn-icon {width:1.85rem;height:1.6rem;padding:.1rem 0;text-align:center;}
+//.btn.btn-icon-text {width:auto;padding:.1rem .5rem 0 0;text-transform:uppercase;}
+//.btn.btn-icon .fa {width:1rem;}
 
 /* LOGIN */
 #login-form {width:20rem;margin:20% auto;box-shadow:0 0 1.25rem $gray-dark;}
