Flexy-Thumb styling - Selecting thumbs
Former-commit-id: e873da8e9efc5c5fb4625653b6c4730983538651

--- a/sys/flexyadmin/assets/scss/themes/_classic.scss
+++ b/sys/flexyadmin/assets/scss/themes/_classic.scss
@@ -8,8 +8,8 @@
 //$gray-dark:                 #373a3c;
 //$gray:                      #55595c;
 //$gray-light:                #818a91;
-$gray-lighter:              #DEA;
-$gray-lightest:             lighten($gray-lighter,15%);
+//$gray-lighter:              #DEA;
+//$gray-lightest:             lighten($gray-lighter,15%);
 
 $brand-primary:             #696;
 $brand-success:             #0A0;
